--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,4 +1,4 @@
-@import 'https://fonts.googleapis.com/css?family=Roboto|Raleway';
+@import 'https://fonts.googleapis.com/css?family=Roboto|Raleway:400,700';
 
 body {
   background-color: #fff;
@@ -20,7 +20,6 @@ p, ul, ol, table, pre, dl {
 h1, h2, h3 {
   line-height:1.1;
   font-family: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-weight:700;
 }
 
 h1 {
